--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,3 +8,4 @@ vscode:
    extensions:
       - auchenberg.vscode-browser-preview@0.6.7:UsqnxvUQdYtm8ZISiN056w==
       - evilz.vscode-reveal@4.0.4:q3Ae+UO4Nv6SYzToAsa1zw==
+      - HansUXdev.bootstrap5-snippets@1.2.3:e23xRdDNFFIPdzsiYVQ07g==
